--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "basic site to manage UNO games",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:dev": "webpack-dev-server",
+    "build:prod":"webpack --config webpack.config.prod.js",
+    "build":"webpack"
   },
   "repository": {
     "type": "git",
@@ -17,11 +20,15 @@
   },
   "homepage": "https://github.com/Ofineo/uno#readme",
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
     "eslint": "^7.0.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1"
+    "eslint-plugin-standard": "^4.0.1",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0"
   }
 }
